# rust-web-app

./: README.md
client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
